--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="262dp"
+        android:layout_height="96dp"
+        android:text="amk"
+        tools:layout_editor_absoluteX="63dp"
+        tools:layout_editor_absoluteY="201dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
