--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,9 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="262dp"
-        android:layout_height="96dp"
-        android:text="amk"
+        android:layout_width="252dp"
+        android:layout_height="89dp"
+        android:text="yapınca haber ver lan "
         tools:layout_editor_absoluteX="63dp"
         tools:layout_editor_absoluteY="201dp" />
 
