--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,10 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="color_1">#3060A3</color>
+    <color name="color_2">#0977AE</color>
+    <color name="color_3">#089DBC</color>
+    <color name="color_4">#06D8C5</color>
+    <color name="color_5">#12FFBD</color>
 </resources>
