--- a/app/src/main/res/layout/activity_friends.xml
+++ b/app/src/main/res/layout/activity_friends.xml
@@ -10,6 +10,32 @@
     tools:context=".Friends">
 
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <LinearLayout
+
+            android:background="@color/black"
+            android:layout_width="100dp"
+            android:layout_height="100dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginLeft="100dp"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:background="@color/black"
+        android:orientation="horizontal">
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_margin="5dp"
+        android:background="@color/black"
+        android:layout_width="400dp"
+        android:layout_height="300dp">
+
+    </LinearLayout>
 
 
 </LinearLayout>
