--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,17 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/color_4</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="Theme.EmergeV3.Login" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/color_1</item>
+        <item name="colorOnPrimary">@color/color_2</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/color_2</item>
+        <item name="colorSecondaryVariant">@color/color_3</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
+        <!-- Customize your theme here. -->
+    </style>
 </resources>
