--- a/app/src/main/res/layout/activity_friends.xml
+++ b/app/src/main/res/layout/activity_friends.xml
@@ -13,29 +13,75 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
+
         <LinearLayout
 
-            android:background="@color/black"
-            android:layout_width="100dp"
-            android:layout_height="100dp"/>
+
+            android:layout_width="45dp"
+            android:layout_margin="8dp"
+            android:layout_height="50dp">
+
+            <ImageView
+                android:layout_marginBottom="1dp"
+                android:id="@+id/imageView3"
+                android:layout_width="match_parent"
+
+                android:layout_height="match_parent"
+
+                app:srcCompat="@drawable/g" />
+        </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginLeft="100dp"
+
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:background="@color/black"
+        android:layout_marginLeft="100dp"
+
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="@color/color_1"
+            android:text="Friends"
+            android:fontFamily="@font/roboto_thin"
+            android:textSize="76sp"
+            android:textAlignment="textEnd"
+            android:paddingRight="14dp"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:layout_weight="1"
+        android:background="@color/black">
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_margin="5dp"
+        android:layout_weight="1.5"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/color_1"
         android:orientation="horizontal">
 
     </LinearLayout>
     <LinearLayout
         android:layout_margin="5dp"
-        android:background="@color/black"
-        android:layout_width="400dp"
-        android:layout_height="300dp">
+        android:layout_weight="1.5"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/color_1"
+        android:orientation="horizontal">
 
     </LinearLayout>
+
 
 
 </LinearLayout>
