--- a/app/src/main/res/layout/activity_friends.xml
+++ b/app/src/main/res/layout/activity_friends.xml
@@ -18,18 +18,18 @@
         <LinearLayout
 
 
-            android:layout_width="45dp"
+            android:layout_width="30dp"
             android:layout_margin="8dp"
-            android:layout_height="50dp">
+            android:layout_height="30dp">
 
             <ImageView
-                android:layout_marginBottom="1dp"
+
                 android:id="@+id/imageView3"
                 android:layout_width="match_parent"
 
                 android:layout_height="match_parent"
 
-                app:srcCompat="@drawable/g" />
+                app:srcCompat="@drawable/ic_back" />
         </LinearLayout>
 
     </LinearLayout>
@@ -43,12 +43,13 @@
         android:orientation="horizontal">
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:textColor="@color/color_1"
             android:text="Friends"
             android:fontFamily="@font/roboto_thin"
             android:textSize="76sp"
             android:textAlignment="textEnd"
+
             android:paddingRight="14dp"/>
 
     </LinearLayout>
