--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,14 @@
     android:orientation="vertical"
     android:theme="@style/Theme.EmergeV3"
     tools:context=".ActivityHome">
-
+<Button
+    android:id="@+id/logout"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Logout"
+    android:layout_gravity="center"
+    android:backgroundTint="@color/color_3"
+    android:textColor="@color/white"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
