--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,7 +44,7 @@
                 android:textColor="@color/color_1"
                 android:text="Login"
                 android:fontFamily="@font/roboto_thin"
-                android:textSize="76sp"
+                android:textSize="54sp"
                 android:textAlignment="textEnd"
                 android:paddingRight="14dp"/>
         </LinearLayout>
@@ -60,7 +60,6 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp">
             <TextView
-                android:id="@+id/textFirstname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="MAIL"
@@ -68,6 +67,7 @@
                 android:textSize="20sp"/>
 
             <EditText
+                android:id="@+id/logMail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_thin"
@@ -76,14 +76,14 @@
                 android:textSize="20sp"
                 android:backgroundTint="@color/color_1"/>
             <TextView
-                android:id="@+id/textEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="E MAIL"
+                android:text="Password"
                 android:textColor="@color/color_1"
                 android:textSize="20sp"/>
 
             <EditText
+                android:id="@+id/logPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_thin"
@@ -92,6 +92,7 @@
                 android:textSize="20sp"
                 android:backgroundTint="@color/color_1"/>
         <TextView
+            android:id="@+id/forgotPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -104,10 +105,10 @@
         android:id="@+id/loginLayoutButtons"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1.3"
+        android:layout_weight="1.1"
         android:orientation="vertical">
         <Button
-            android:id="@+id/loginbuttonmain"
+            android:id="@+id/logBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
@@ -128,6 +129,16 @@
             android:src="@drawable/google_icon"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"/>
+        <TextView
+            android:id="@+id/signupTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:paddingTop="20dp"
+            android:text="Signup"
+            android:textColor="@color/color_3"
+            android:textAlignment="center"
+            android:onClick="signup"/>
 
     </LinearLayout>
 </LinearLayout>
