--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -153,7 +153,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/avenir"
+                android:fontFamily="@font/roboto_thin"
                 android:paddingLeft="34dp"
                 android:text="My interests"
                 android:textColor="#0977AE"
