--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,6 +24,8 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
+        <item name="buttonBarNegativeButtonStyle">@color/black</item>
+        <item name="buttonBarPositiveButtonStyle">@color/black</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
