--- a/app/src/main/res/drawable-mdpi/layout_border.xml
+++ b/app/src/main/res/drawable-mdpi/layout_border.xml
@@ -12,7 +12,7 @@
     <item android:top="1dp" android:bottom="1dp" android:left="1dp" android:right="1dp">
         <shape
             android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#3060A3" />
+            <stroke android:width="1dp" />
             <solid android:color="@color/white" />
         </shape>
     </item>
